added dev,qa env property files to repo and made limits service fetch dev profile

--- a/limits_service/src/main/resources/application.properties
+++ b/limits_service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.profile=dev
 limits-service.minimum=2
 limits-service.maximum=995
