10_added_JPA_method_findByFromAndTo_to_talk_to_H2_for_currencyExchangeMicorservice

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=currency-exchange
 server.port=8000
 #not fetching configuration for now so,
 spring.cloud.config.enabled=false
+spring.jpa.show-sql=true
+#mem to represent that H2 is an in memory database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
