added Eureka naming server,registered the MS by making them eureka client

--- a/currency-converter-service/src/main/resources/application.properties
+++ b/currency-converter-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
  spring.application.name=currency-converter
  server.port=8100
  spring.cloud.config.import-check.enabled=false
+ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
