--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 #mem to represent that H2 is an in memory database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
