added custom routes to hit API using gateway, added configuration for the same

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=8765
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #not fetching configuration from local git for now so,
 spring.cloud.config.enabled=false
-
-spring.cloud.gateway.discovery.locator.enabled=true
+#disable the auto discovery locator as we have now configured custom routes to out registered services
+#spring.cloud.gateway.discovery.locator.enabled=true
