--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
  eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+ #retry property for the sample-api
+ resilience4j.retry.instances.sample-api.maxRetryAttempts=5
+#this configures the time gap b/w each retry
+resilience4j.retry.instances.sample-api.waitDuration=1s
+# this configures a exponential wait in the subsequent calls 1s , 2s, 3s
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+
