added @ CircuitBreaker to maange the load on MS circuit

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.h2.console.enabled=true
 resilience4j.retry.instances.sample-api.waitDuration=1s
 # this configures a exponential wait in the subsequent calls 1s , 2s, 3s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
-
+#below property , will switch to OPEN state from closed it 90% request fails
+#resilience4j.circuitbreaker.instances.default.failureThresholdRate=90
