added dependecies for sleuth_framework_to_generate_unique_id and zipkin to connect MS to zipkin server

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -15,3 +15,6 @@ resilience4j.retry.instances.sample-api.waitDuration=1s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 #below property , will switch to OPEN state from closed it 90% request fails
 #resilience4j.circuitbreaker.instances.default.failureThresholdRate=90
+
+#below config for the tracing the % of request / sending the % of request to the distributed tracing server.
+spring.sleuth.sampler.probability=1.0 	
