connect Api-gateway,curr Exchange MS with zipkin distributed tracing server

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,3 +5,9 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.cloud.config.enabled=false
 #disable the auto discovery locator as we have now configured custom routes to out registered services
 #spring.cloud.gateway.discovery.locator.enabled=true
+
+#below config for the tracing the % of request / sending the % of request to the distributed tracing server.
+spring.sleuth.sampler.probability=1.0
+
+#how the MS is able to find the zipkin server ? below is the defualt port configured in spring and we launched zipkin at same port.
+#	spring.zipkin.baseUrl=http://localhost:9411/
