--- a/currency-converter-service/src/main/resources/application.properties
+++ b/currency-converter-service/src/main/resources/application.properties
@@ -2,3 +2,9 @@
  server.port=8100
  spring.cloud.config.import-check.enabled=false
  eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+ #below config for the tracing the % of request / sending the % of request to the distributed tracing server.
+spring.sleuth.sampler.probability=1.0
+
+#how the MS is able to find the zipkin server ? below is the defualt port configured in spring and we launched zipkin at same port.
+#	spring.zipkin.baseUrl=http://localhost:9411/
