--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -18,3 +18,6 @@ resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 
 #below config for the tracing the % of request / sending the % of request to the distributed tracing server.
 spring.sleuth.sampler.probability=1.0 	
+
+#how the MS is able to find the zipkin server ? below is the defualt port configured in spring and we launched zipkin at same port.
+#	spring.zipkin.baseUrl=http://localhost:9411/
