add image config to spring maven plugin to locally create images of the services and create a docker-compose file to run all the images togerther as a multi container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,57 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - currency-network  
+      - currency-network
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+          
+  currency-converter:
+    image: amandockerhub/msv2-currency-converter-service:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8100:8100"
+    networks:
+      - currency-network
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
 
+  api-gateway:
+    image: amandockerhub/msv2-api-gateway:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8765:8765"
+    networks:
+      - currency-network
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+
+  naming-server:
+    image: amandockerhub/msv2-naming-server:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8761:8761"
+    networks:
+      - currency-network
+
+#docker run -p 9411:9411 openzipkin/zipkin:2.23 now lets add a service for to launch zipkin from docker-compose
+#below config is defaulted in the MS so we have to configure this for containers to log request to zipkin server
+#spring.zipkin.baseUrl=http://localhost:9411/
+  zipkin-server:
+    image: openzipkin/zipkin:2.23
+    mem_limit: 300m
+    ports:
+      - "9411:9411"
+    networks:
+      - currency-network
 
 networks:
   currency-network:      
